Add http proxy - keep using java.net http client transport
  - does not support a combination of https requests to BZ and using authenticated proxy